# kafka2sse-backend

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  PROMPT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.hypothesis/constants/: 0e90ea48e7adc06f  1675578a0fe195a1  1f5af21aa17c2806  764927ef843eed1d  9b323bcb667667be  b0f49560312c2140  b1b52c03a4756700  b9b8fa6fb5db7aeb  c968cafe5f0708d8  ca260d8ecbf6a5e8  cc548bb429e616e5  e8cc52899a928080  eb8c7f6fa95b0085  fc8ae3471f90d5b2
.hypothesis/examples/04e6b3400353b141/: 7c3b1258ca065c72  b5e9d60f201c2f84
.hypothesis/examples/7c3b1258ca065c72/: 2e1bc0d2f15bd0b7  384cbf2a5e8d1678
scripts/: run-release.sh
src/: __init__.py  config.py  main.py
src/models/: entity_change.py  sse_event.py
src/routes/: health.py  streams.py  topics.py
src/services/: client_connection.py  event_router.py  kafka_consumer.py  redis_state.py  sse_broadcaster.py  stream_manager.py
src/tests/: test_config.py  test_fuzz.py
src/tests/contract/: test_fuzz.py
src/tests/contract/test_models/: test_entity_change.py
src/tests/integration/: test_kafka.py
src/tests/test_services/: test_sse_broadcaster.py  test_stream_manager.py
src/tests/unit/test_services/: test_sse_broadcaster.py  test_stream_manager.py
tests/unit/: test_config.py  test_main.py
tests/unit/test_models/: test_entity_change.py
tests/unit/test_services/: test_client_connection.py  test_kafka_consumer.py  test_redis_state.py  test_sse_broadcaster.py  test_stream_manager.py
