[tool.poetry]
name = "kafka2sse"
version = "0.1.0"
description = "A reusable Kafka → SSE gateway"
authors = ["Entitybase Team"]
readme = "README.md"
packages = [{include = "kafka2sse"}]

[tool.poetry.dependencies]
python = "^3.11"
litestar = "^2.0"
confluent-kafka = "^2.3"
pydantic = "^2.5"
pyyaml = "^6.0"
uvicorn = {extras = ["standard"], version = "^0.25"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
httpx = "^0.25"
ruff = "^0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
