[tool.poetry]
name = "kafka2sse"
version = "0.1.0"
description = "A reusable Kafka → SSE gateway"
authors = ["Entitybase Team"]
readme = "README.md"
packages = [{include = "kafka2sse"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
httpx = "^0.27"
sse-starlette = "^2.0"
aiokafka = "^0.10"
confluent-kafka = "^2.4"
pydantic = "^2.10"
pyyaml = "^6.0"
uvicorn = {extras = ["standard"], version = "^0.32"}
valkey = "^6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
ruff = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
